--- a/package.json
+++ b/package.json
@@ -1,31 +1,38 @@
 {
-  "name": "wopr-plugin-voice-deepgram-stt",
-  "version": "1.0.0",
-  "description": "Deepgram STT provider using nova-3 model",
-  "type": "module",
-  "main": "index.js",
-  "scripts": {
-    "build": "tsc",
-    "dev": "tsc -w"
-  },
   "dependencies": {
     "ws": "^8.16.0"
   },
+  "description": "Deepgram STT provider using nova-3 model",
   "devDependencies": {
-    "typescript": "^5.3.0",
+    "@biomejs/biome": "^2.3.14",
     "@types/node": "^20.10.0",
-    "@types/ws": "^8.5.10"
+    "@types/ws": "^8.5.10",
+    "typescript": "^5.3.0"
   },
+  "main": "index.js",
+  "name": "wopr-plugin-voice-deepgram-stt",
+  "scripts": {
+    "build": "tsc",
+    "check": "biome check src/ && tsc --noEmit",
+    "dev": "tsc -w",
+    "format": "biome format --write src/",
+    "lint": "biome check src/",
+    "lint:fix": "biome check --fix src/"
+  },
+  "type": "module",
+  "version": "1.0.0",
   "wopr": {
     "plugin": {
-      "name": "voice-deepgram-stt",
       "category": "voice",
-      "type": "stt",
       "description": "Cloud STT using Deepgram's nova-3 model",
+      "install": [],
+      "name": "voice-deepgram-stt",
       "requires": {
-        "env": ["DEEPGRAM_API_KEY"]
+        "env": [
+          "DEEPGRAM_API_KEY"
+        ]
       },
-      "install": []
+      "type": "stt"
     }
   }
 }
