--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "typescript": "^5.3.0"
   },
   "main": "index.js",
-  "name": "wopr-plugin-voice-deepgram-stt",
+  "name": "@wopr-network/wopr-plugin-voice-deepgram-stt",
   "scripts": {
     "build": "tsc",
     "check": "biome check src/ && tsc --noEmit",
     "dev": "tsc -w",
     "format": "biome format --write src/",
     "lint": "biome check src/",
-    "lint:fix": "biome check --fix src/"
+    "lint:fix": "biome check --fix src/",
+    "prepublishOnly": "npm run build"
   },
   "type": "module",
   "version": "1.0.0",
@@ -34,5 +35,11 @@
       },
       "type": "stt"
     }
-  }
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "files": [
+    "dist"
+  ]
 }
