--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "@biomejs/biome": "^2.3.14",
     "@types/node": "^25.2.3",
     "@types/ws": "^8.5.10",
-    "typescript": "^5.3.0",
-    "semantic-release": "^24.0.0",
-    "@wopr-network/semantic-release-config": "^1.0.0"
+    "typescript": "^5.3.0"
   },
   "main": "index.js",
   "name": "@wopr-network/wopr-plugin-voice-deepgram-stt",
